# challenges

./: README.md  pyproject.toml
adventofcode/2019/14/: x2019_14_01.py
adventofcode/2020/23/: 01.py  01_02_fast.py
adventofcode/2020/24/: 01.py
adventofcode/2021/01/: 01.py  02.py
leetcode/interview/1-easy/01-array/: 01-remove-duplicates.py  02-buy-and-sell.py  03-rotate-array.py  04-contains-duplicate.py  05-single-number.py  06-intersection-arrays.py  07-plus-one.py  08-move-zeroes.py
leetcode/interview/2-medium/01-arrays-and-strings/01-3sum/: 3sum-naive.py
neetblind75/: 01-contains-duplicate.py  02-valid-anagram.py  03-DONE-twosum.py  04-group-anagrams.py  09-valid-palindrome.py  10-3sum.py  10-WIP-3sum.py  12-best-time-to-buy-and-sell-stock.py  13-WIP-longest-substring-wo-rep-char.py  13-longest-substring-wo-rep-char.py  16-valid-parentheses.py  19-DONE-reverse-linked-list.py  20-DONE-merge-two-sorted-lists.py  20-merge-two-sorted-lists.py  21-HALFDONE-linked-list-cycle.py  21-linked-list-cycle.py  25-invert-binary-tree.py  26-DONE-max-depth.py  27-same-tree.py  28-DONE-subtree.py  49-DONE-climbing-stairs.py  66-meeting-rooms.py  71-number-of-1-bits.py  72-counting-bits.py  73-WIP-reverse-bits.py  73-reverse-bits.py  74-missing-number.py  tools.py
