[project]
name = "challenges"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Engelhardt",email = "alexander.w.engelhardt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "ipdb (>=0.13.13,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
